--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -97,7 +97,7 @@
   border-style: dotted;
   border-radius: 50%;
 
-  background-image: url(../pic.jpeg);
+  background-image: url(../resources/img/pic.jpeg);
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
